--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,7 @@ h5 {
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 768px) {
   .Preview {
    
     height: 100%;
